force-app/main/default/objects/Holiday__c/Holiday__c.object-meta.xml
<CustomObject>
    <description>The public holidays or break for educational institution or campus.</description>
    <label>Holiday</label>
    <nameField>
        <label>Holiday Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Holidays</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>