force-app/main/default/objects/Holiday__c/fields/Educational_Institution_Campus__c.field-meta.xml
<CustomField>
    <fullName>Educational_Institution_Campus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The holiday for educational institution or a specific campus.</description>
    <inlineHelpText>The holiday for educational institution or a specific campus.</inlineHelpText>
    <label>Educational Institution/Campus</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Campus</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Educational_Institution</value>
        </filterItems>
        <infoMessage>Please select an educational institution or a campus account.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Holidays</relationshipLabel>
    <relationshipName>Holidays</relationshipName>
    <type>Lookup</type>
</CustomField>