force-app/main/default/objects/Holiday__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <inlineHelpText>If this holiday only lasts 1 day, this should be the same as the Start Date.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>