force-app/main/default/objects/Holiday__c/validationRules/Validate_Holiday_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Holiday_Date</fullName>
    <active>true</active>
    <description>This is to ensure end date is not earlier than start date.</description>
    <errorConditionFormula>Start_Date__c &gt; End_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>The end date cannot be earlier than start date.</errorMessage>
</ValidationRule>