force-app/main/default/objects/Holiday__c/listViews/Next_Years_Holidays.listView-meta.xml
<ListView>
    <fullName>Next_Years_Holidays</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Educational_Institution_Campus__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Start_Date__c</field>
        <operation>equals</operation>
        <value>NEXT_YEAR</value>
    </filters>
    <filters>
        <field>End_Date__c</field>
        <operation>equals</operation>
        <value>NEXT_YEAR</value>
    </filters>
    <label>Next Year&apos;s Holidays</label>
</ListView>